Retrained Models, Getting front end ready to deploy
Retrained Models, Getting front end ready to deploy

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ ENV/
 
 # Folders
 .idea/
+/submissions/team/pavan-kumar-reddy-kathi/__pycache__
+/submissions/team/pavan-kumar-reddy-kathi/api/__pycache__
+/submissions/team/pavan-kumar-reddy-kathi/catboost_info
